--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -12,6 +12,7 @@
     "array-move": "^4.0.0",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
