--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -14,6 +14,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "abab": "^2.0.6",
     "ajv": "^8.16.0",
     "ajv-keywords": "^5.1.0",
@@ -30,6 +32,7 @@
     "react-scripts": "5.0.1",
     "schema-utils": "^4.2.0",
     "styled-components": "^6.1.11",
+    "typescript": "^5.5.2",
     "web-vitals": "^2.1.4",
     "webpack-dev-server": "^5.0.4"
   },
