--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -11,6 +11,7 @@
     "@geist-ui/icons": "^1.0.2",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.1",
+    "@tanstack/react-query": "^5.49.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -28,6 +29,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "schema-utils": "^4.2.0",
