--- a/package.json
+++ b/package.json
@@ -3,25 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "@clerk/nextjs": "^6.20.0",
+    "@geist-ui/core": "^2.3.8",
+    "@geist-ui/icons": "^1.0.2",
+    "@supabase/supabase-js": "^2.49.8",
+    "@tanstack/react-query": "^5.77.0",
+    "animejs": "^3.2.2",
+    "axios": "^1.6.8",
+    "classnames": "^2.5.1",
+    "framer-motion": "^12.12.2",
+    "lodash": "^4.17.21",
+    "next": "15.3.2",
+    "react": "18.3.1",
+    "react-beautiful-dnd": "13.1.1",
+    "react-dom": "18.3.1",
+    "react-loading-skeleton": "^3.5.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@types/animejs": "^3.1.4",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.23",
+    "@types/react": "^18.2.37",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-dom": "^18.2.15",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.1.0",
     "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
-  }
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
+    "typescript": "^5.5.0"
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
