--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -276,11 +276,7 @@ enabled = false
 # user_pool_id = "my-user-pool-id"
 # user_pool_region = "us-east-1"
 
-# Use Clerk as a third-party provider alongside Supabase Auth.
-[auth.third_party.clerk]
-enabled = false
-# Obtain from https://clerk.com/setup/supabase
-# domain = "example.clerk.accounts.dev"
+# Remove Clerk as a third-party provider
 
 [edge_runtime]
 enabled = true
