--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@clerk/types": "^4.60.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/animejs": "^3.1.4",
     "@types/lodash": "^4.17.17",
@@ -42,6 +43,7 @@
     "@types/react": "^18.2.37",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.2.15",
+    "@types/react-transition-group": "^4.4.12",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "autoprefixer": "^10.4.21",
