--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
     "@geist-ui/icons": "^1.0.2",
+    "@hello-pangea/dnd": "^18.0.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/auth-ui-react": "^0.4.7",
@@ -27,7 +28,6 @@
     "next": "15.3.2",
     "ramda": "^0.30.1",
     "react": "18.3.1",
-    "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.3.1",
     "react-loading-skeleton": "^3.5.0",
     "react-transition-group": "^4.4.5",
