--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-grid-layout": "^1.5.1",
     "react-loading-skeleton": "^3.5.0",
+    "react-resizable-panels": "^3.0.3",
+    "react-rnd": "^10.5.2",
+    "react-split-pane": "^0.1.92",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.18"
   },
