--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react": "^18.2.37",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.2.15",
+    "@types/react-grid-layout": "^1.3.5",
     "@types/react-transition-group": "^4.4.12",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
